gcc/testsuite/g++.dg/parse/namespace11.C
// PR c++/43069

namespace std {
  template < typename >
  void swap ();
}
template std::swap		// { dg-error "" }
